--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_script:
   - yarn
 script:
   - npm test
+  - npm run build
 after_success:
   - npm run build
   - ssh-keyscan $DOMAIN > ~/.ssh/known_hosts
