Update to angular7

--- a/package.json
+++ b/package.json
@@ -5,38 +5,39 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "@angular/cli": "^6.0.1",
-    "@angular/common": "^6.0.0",
-    "@angular/compiler": "^6.0.0",
-    "@angular/compiler-cli": "^6.0.0",
-    "@angular/core": "^6.0.0",
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/platform-browser-dynamic": "^6.0.0",
-    "@types/jasmine": "^2.8.7",
-    "awesome-typescript-loader": "^5.0.0",
+    "@angular/cli": "^7.0.5",
+    "@angular/common": "^7.0.3",
+    "@angular/compiler": "^7.0.3",
+    "@angular/compiler-cli": "^7.0.3",
+    "@angular/core": "^7.0.3",
+    "@angular/platform-browser": "^7.0.3",
+    "@angular/platform-browser-dynamic": "^7.0.3",
+    "@types/jasmine": "^2.8.11",
+    "awesome-typescript-loader": "^5.2.1",
     "ngx-lightbox": "1.1.0",
-    "copyfiles": "^2.0.0",
-    "core-js": "^2.5.6",
+    "copyfiles": "^2.1.0",
+    "core-js": "^2.5.7",
     "del-cli": "^1.1.0",
-    "jasmine-core": "^2.5.2",
-    "karma": "^2.0.2",
+    "jasmine-core": "^3.3.0",
+    "karma": "^3.1.1",
     "karma-jasmine": "^1.1.2",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^3.0.0",
+    "karma-webpack": "^3.0.5",
     "phantomjs-prebuilt": "^2.1.16",
-    "rxjs": "^6.1.0",
-    "tslint": "^5.10.0",
-    "typescript": "2.7.2",
-    "webpack": "^4.8.1",
+    "rxjs": "^6.3.3",
+    "tslint": "^5.11.0",
+    "typescript": "3.1.6",
+    "webpack": "^4.25.1",
     "zone.js": "^0.8.26",
-    "@angular-devkit/build-angular": "~0.6.1"
+    "@angular-devkit/build-angular": "~0.10.5"
   },
   "scripts": {
     "start": "./node_modules/.bin/ng serve",
     "build": "./node_modules/.bin/ng build",
     "test": " ./node_modules/.bin/ng lint && ./node_modules/.bin/ng test",
     "lint": "./node_modules/.bin/ng lint",
+    "update": "./node_modules/.bin/ng update",
     "prepublishOnly": "./node_modules/.bin/ngc && ./node_modules/.bin/copyfiles -u 1 src/img/* src/*.js src/*.d.ts src/*.js.map src/*.metadata.json src/*.css .",
     "postpublish": "./node_modules/.bin/del '*.{service,component,module,spec,ngfactory}.js' '*.{metadata,ngsummary}.json' index.js webpack.config.js  '*.{ts,css,map}' '{compiled,img}' 'src/*.{d.ts,ngfactory.ts,js,map,json}'"
   },
