--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@angular/core": "^7.0.3",
     "@angular/platform-browser": "^7.0.3",
     "@angular/platform-browser-dynamic": "^7.0.3",
-    "@types/jasmine": "^2.8.11",
+    "@types/jasmine": "^3.3.0",
     "awesome-typescript-loader": "^5.2.1",
     "ngx-lightbox": "1.1.0",
     "copyfiles": "^2.1.0",
@@ -23,19 +23,19 @@
     "karma-jasmine": "^2.0.1",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^3.0.5",
+    "karma-webpack": "next",
     "phantomjs-prebuilt": "^2.1.16",
     "rxjs": "^6.3.3",
     "tslint": "^5.11.0",
     "typescript": "3.1.6",
-    "webpack": "^4.25.1",
+    "webpack": "^4.26.0",
     "zone.js": "^0.8.26",
     "@angular-devkit/build-angular": "~0.10.5"
   },
   "scripts": {
     "start": "./node_modules/.bin/ng serve",
     "build": "./node_modules/.bin/ng build",
-    "test": " ./node_modules/.bin/ng lint && ./node_modules/.bin/ng test",
+    "test": "./node_modules/.bin/ng lint && ./node_modules/.bin/ng test",
     "lint": "./node_modules/.bin/ng lint",
     "update": "./node_modules/.bin/ng update",
     "prepublishOnly": "./node_modules/.bin/ngc && ./node_modules/.bin/copyfiles -u 1 src/img/* src/*.js src/*.d.ts src/*.js.map src/*.metadata.json src/*.css .",
