--- a/package.json
+++ b/package.json
@@ -5,32 +5,32 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "@angular/cli": "^7.0.5",
-    "@angular/common": "^7.0.3",
-    "@angular/compiler": "^7.0.3",
-    "@angular/compiler-cli": "^7.0.3",
-    "@angular/core": "^7.0.3",
-    "@angular/platform-browser": "^7.0.3",
-    "@angular/platform-browser-dynamic": "^7.0.3",
-    "@types/jasmine": "^3.3.0",
+    "@angular-devkit/build-angular": "~0.13.9",
+    "@angular/cli": "^7.3.9",
+    "@angular/common": "^7.2.15",
+    "@angular/compiler": "^7.2.15",
+    "@angular/compiler-cli": "^7.2.15",
+    "@angular/core": "^7.2.15",
+    "@angular/platform-browser": "^7.2.15",
+    "@angular/platform-browser-dynamic": "^7.2.15",
+    "@types/jasmine": "^3.3.12",
     "awesome-typescript-loader": "^5.2.1",
-    "ngx-lightbox": "1.1.0",
     "copyfiles": "^2.1.0",
     "core-js": "^2.5.7",
     "del-cli": "^1.1.0",
-    "jasmine-core": "^3.3.0",
-    "karma": "^3.1.1",
+    "jasmine-core": "^3.4.0",
+    "karma": "^4.1.0",
     "karma-jasmine": "^2.0.1",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "next",
+    "karma-webpack": "^4.0.0-rc.6",
+    "ngx-lightbox": "1.1.0",
     "phantomjs-prebuilt": "^2.1.16",
-    "rxjs": "^6.3.3",
-    "tslint": "^5.11.0",
+    "rxjs": "^6.5.2",
+    "tslint": "^5.16.0",
     "typescript": "3.1.6",
-    "webpack": "^4.26.0",
-    "zone.js": "^0.8.26",
-    "@angular-devkit/build-angular": "~0.10.5"
+    "webpack": "^4.31.0",
+    "zone.js": "^0.8.26"
   },
   "scripts": {
     "start": "./node_modules/.bin/ng serve",
