--- a/package.json
+++ b/package.json
@@ -1,44 +1,52 @@
 {
   "name": "ngx-lightbox",
-  "version": "1.2.0",
-  "description": "A port >= angular5 for lightbox2",
+  "version": "2.0.0",
+  "description": "A port >= angular8 for lightbox2",
   "main": "index.js",
   "dependencies": {},
+  "peerDependencies": {
+    "@angular/common": "^8.0.0",
+    "@angular/core": "^8.0.0"
+  },
   "devDependencies": {
-    "@angular/cli": "^6.0.1",
-    "@angular/common": "^6.0.0",
-    "@angular/compiler": "^6.0.0",
-    "@angular/compiler-cli": "^6.0.0",
-    "@angular/core": "^6.0.0",
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/platform-browser-dynamic": "^6.0.0",
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular-devkit/build-ng-packagr": "~0.800.0",
+    "@angular/cli": "^8.0.0",
+    "@angular/common": "^8.0.0",
+    "@angular/compiler": "^8.0.0",
+    "@angular/compiler-cli": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/platform-browser": "^8.0.0",
+    "@angular/platform-browser-dynamic": "^8.0.0",
     "@types/jasmine": "^2.8.7",
     "awesome-typescript-loader": "^5.0.0",
-    "ngx-lightbox": "1.1.0",
-    "copyfiles": "^2.0.0",
+    "codelyzer": "^5.0.1",
     "core-js": "^2.5.6",
-    "del-cli": "^1.1.0",
-    "jasmine-core": "^2.5.2",
-    "karma": "^2.0.2",
-    "karma-jasmine": "^1.1.2",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^3.0.0",
-    "phantomjs-prebuilt": "^2.1.16",
+    "jasmine-core": "^3.4.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^4.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "ng-packagr": "^5.1.0",
     "rxjs": "^6.1.0",
+    "serve": "^11.0.1",
+    "svg-sprite": "^1.5.0",
+    "tsickle": "^0.35.0",
+    "tslib": "^1.9.0",
     "tslint": "^5.10.0",
-    "typescript": "2.7.2",
+    "typescript": "3.4.5",
     "webpack": "^4.8.1",
-    "zone.js": "^0.8.26",
-    "@angular-devkit/build-angular": "~0.6.1"
+    "zone.js": "~0.9.1"
   },
   "scripts": {
-    "start": "./node_modules/.bin/ng serve",
-    "build": "./node_modules/.bin/ng build",
-    "test": " ./node_modules/.bin/ng lint && ./node_modules/.bin/ng test",
-    "lint": "./node_modules/.bin/ng lint",
-    "prepublishOnly": "./node_modules/.bin/ngc && ./node_modules/.bin/copyfiles -u 1 src/img/* src/*.js src/*.d.ts src/*.js.map src/*.metadata.json src/*.css .",
-    "postpublish": "./node_modules/.bin/del '*.{service,component,module,spec,ngfactory}.js' '*.{metadata,ngsummary}.json' index.js webpack.config.js  '*.{ts,css,map}' '{compiled,img}' 'src/*.{d.ts,ngfactory.ts,js,map,json}'"
+    "start": "ng serve demo",
+    "build": "ng ng build ngx-lightbox && ng build demo --prod",
+    "serve_prod": "serve dist/demo",
+    "test": "ng test ngx-lightbox",
+    "lint": "ng lint ngx-lightbox",
+    "prepublish": "echo \"Make sure to run npm run build. Go to dist/ngx-lightbox folder and run npm publish there.\" && exit 1"
   },
   "repository": {
     "type": "git",
