--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,25 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": ".",
+    "importHelpers": true,
+    "module": "esnext",
     "sourceMap": true,
     "declaration": true,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "noUnusedLocals": true,
-    "target": "es5",
+    "target": "es2015",
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
   },
   "include": [
-    "src/*.ts"
+    "src/lib/index.ts"
   ]
 }
