--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "ngx-lightbox",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "A port >= angular5 for lightbox2",
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.801.2",
     "@angular/cli": "^8.0.1",
     "@angular/common": "^8.0.0",
     "@angular/compiler": "^8.0.0",
@@ -23,14 +24,13 @@
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^3.0.5",
+    "ngx-lightbox": "^2.0.0",
     "phantomjs-prebuilt": "^2.1.16",
     "rxjs": "^6.5.2",
     "tslint": "^5.17.0",
     "typescript": "3.4.5",
     "webpack": "^4.33.0",
-    "zone.js": "^0.9.1",
-    "@angular-devkit/build-angular": "~0.801.2",
-    "ngx-lightbox": "^2.0.0"
+    "zone.js": "^0.9.1"
   },
   "scripts": {
     "start": "./node_modules/.bin/ng serve",
