--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
   "name": "ngx-lightbox",
-  "version": "2.6.2",
+  "version": "2.6.3",
   "description": "A port >= angular5 for lightbox2",
   "main": "index.js",
   "dependencies": {
     "file-saver": "^2.0.5",
-    "ngx-filesaver": "8.1.0"
+    "ngx-filesaver": "14.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.2",
-    "@angular/cli": "^8.0.1",
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/compiler-cli": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
-    "@types/jasmine": "^3.3.13",
-    "awesome-typescript-loader": "^5.2.1",
-    "copyfiles": "^2.1.0",
-    "core-js": "^2.6.9",
-    "del-cli": "^2.0.0",
-    "jasmine-core": "^3.4.0",
-    "karma": "^4.1.0",
-    "karma-jasmine": "^2.0.1",
+    "@angular-devkit/build-angular": "^14.0.0",
+    "@angular/cli": "^14.0.0",
+    "@angular/common": "^14.0.0",
+    "@angular/compiler": "^14.0.0",
+    "@angular/compiler-cli": "^14.0.0",
+    "@angular/core": "^14.0.0",
+    "@angular/platform-browser": "^14.0.0",
+    "@angular/platform-browser-dynamic": "^14.0.0",
+    "@types/file-saver": "^2.0.5",
+    "@types/jasmine": "^4.3.0",
+    "copyfiles": "^2.4.1",
+    "core-js": "^3.25.3",
+    "del-cli": "^5.0.0",
+    "jasmine-core": "^4.4.0",
+    "karma": "^6.4.1",
+    "karma-jasmine": "^5.1.0",
     "karma-phantomjs-launcher": "^1.0.4",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^3.0.5",
-    "ngx-lightbox": "^2.5.0",
+    "karma-sourcemap-loader": "^0.3.8",
+    "karma-webpack": "^5.0.0",
+    "ngx-lightbox": "^2.6.2",
     "phantomjs-prebuilt": "^2.1.16",
-    "rxjs": "^6.5.2",
-    "tslint": "^5.17.0",
-    "typescript": "3.4.5",
-    "webpack": "^4.33.0",
-    "zone.js": "^0.9.1"
+    "rxjs": "^7.5.7",
+    "tslint": "^6.1.3",
+    "typescript": "4.7.4",
+    "webpack": "^5.74.0",
+    "zone.js": "^0.11.8"
   },
   "scripts": {
     "start": "./node_modules/.bin/ng serve",
