--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "ngx-filesaver": "^15.0.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.8",
-    "@angular/cli": "^15.2.8",
-    "@angular/common": "^15.2.9",
-    "@angular/compiler": "^15.2.9",
-    "@angular/compiler-cli": "^15.2.9",
-    "@angular/core": "^15.2.9",
-    "@angular/platform-browser": "^15.2.9",
-    "@angular/platform-browser-dynamic": "^15.2.9",
+    "@angular-devkit/build-angular": "^16.0.1",
+    "@angular/cli": "^16.0.1",
+    "@angular/common": "^16.0.1",
+    "@angular/compiler": "^16.0.1",
+    "@angular/compiler-cli": "^16.0.1",
+    "@angular/core": "^16.0.1",
+    "@angular/platform-browser": "^16.0.1",
+    "@angular/platform-browser-dynamic": "^16.0.1",
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "^4.3.0",
+    "@types/node": "^20.1.4",
     "copyfiles": "^2.4.1",
     "core-js": "^3.30.2",
     "del-cli": "^5.0.0",
@@ -33,7 +34,7 @@
     "tslint": "^6.1.3",
     "typescript": "4.9.5",
     "webpack": "^5.82.1",
-    "zone.js": "^0.11.8"
+    "zone.js": "^0.13.0"
   },
   "scripts": {
     "start": "./node_modules/.bin/ng serve",
