--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.1",
+    "@angular-eslint/builder": "16.0.1",
+    "@angular-eslint/eslint-plugin": "16.0.1",
+    "@angular-eslint/eslint-plugin-template": "16.0.1",
+    "@angular-eslint/schematics": "16.0.1",
+    "@angular-eslint/template-parser": "16.0.1",
     "@angular/cli": "^16.0.1",
     "@angular/common": "^16.0.1",
     "@angular/compiler": "^16.0.1",
@@ -19,14 +24,17 @@
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "^4.3.0",
     "@types/node": "^20.1.4",
+    "@typescript-eslint/eslint-plugin": "5.59.2",
+    "@typescript-eslint/parser": "5.59.2",
     "copyfiles": "^2.4.1",
     "core-js": "^3.30.2",
     "del-cli": "^5.0.0",
+    "eslint": "^8.39.0",
     "jasmine-core": "^4.4.0",
-    "karma": "^6.4.1",
+    "karma": "^6.4.2",
     "karma-jasmine": "^5.1.0",
     "karma-phantomjs-launcher": "^1.0.4",
-    "karma-sourcemap-loader": "^0.3.8",
+    "karma-sourcemap-loader": "^0.4.0",
     "karma-webpack": "^5.0.0",
     "ngx-lightbox": "^2.6.2",
     "phantomjs-prebuilt": "^2.1.16",
